# rs_smm_v2

./: .gitignore  Cargo.toml
skeleton/: Cargo.toml
skeleton/src/: lib.rs  ss.rs
skeleton/src/exchange/: README.md  ex_binance.rs  ex_bybit.rs  exchange.rs  mod.rs
skeleton/src/utils/: README.md  bot.rs  config.rs  ema.rs  localorderbook.rs  logger.rs  mod.rs  models.rs  number.rs  time.rs  vol.rs
skeleton/tests/: config.rs  ex_bybit.rs  exchanges.rs  logger.rs  number.rs  test.toml
src/: lib.rs  main.rs
src/features/: basis.rs  engine.rs  impact.rs  mod.rs  trade.rs
src/params/: params.rs
src/strategy/: maker.rs
src/trader/: mod.rs  quote_gen.rs
