[package]
name = "skeleton"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
binance = "0.21.0"
chrono = "0.4.39"
futures = "0.3.31"
notify = "7.0.0"
num-traits = "0.2.19"
once_cell = "1.20.2"
ordered-float = "4.6.0"
rs_bybit = "0.3.2"
serde = { version = "1.0.217", features = ['derive'] }
teloxide = "0.13.0"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
